# Generator_PW_Plemiona

./: .gitignore  CMakeLists.txt  GeneratorPWCpp.cpp  GeneratorPWHeaders.hpp  README.md  Tests.cpp  project.cpp  project.hpp
test/: CMakeLists.txt  ExampleTests.cpp
